fix: fix sidemenu height overflow

--- a/Front-End/src/app/modules/system/components/side-menu/side-menu.component.scss
+++ b/Front-End/src/app/modules/system/components/side-menu/side-menu.component.scss
@@ -8,7 +8,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    overflow-y: auto;
 
     &__header {
         text-align: center;
@@ -20,9 +19,15 @@
         }
     }
 
+    &__content {
+        height: calc(100% - 68px);
+    }
+
     &__body {
         margin: 0 24px 24px;
         padding-bottom: 24px;
+        overflow-y: auto;
+        max-height: calc(100% - 214px);
         border-bottom: 2px solid #3a6bc5;
     }
 
